--- a/config.properties
+++ b/config.properties
@@ -3,3 +3,6 @@ voterFile = voterInformation
 electionFile = electionInformation
 tableFile =multicastInformation
 ip = localhost
+multicast_adress = 224.0.224.0
+multicast_port = 4321
+results_port = 4322
